--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
 <html>
+  <head>
+    <title>이찬호와 아이들</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-<head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
-
+  <body>
+    <h1>이찬호와 아이들</h1>
+    <p>Welcome to 이찬호와 아이들</p>
+  </body>
 </html>
