--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>이찬호와 아이들</title>
+    <title>이찬호와 아이들 v1</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
