--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <h1>이찬호와 아이들 v2</h1>
-    <p>Welcome to 이찬호와 아이들</p>
+    <p>Welcome to 이찬호와 아이들 v1</p>
   </body>
   <footer>
     <p>연락처 : 1111-1111</p>
